<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background222">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textSize="20sp"
            android:paddingTop="50dp"
            android:background="@drawable/header"
            android:paddingBottom="20dp"
            android:paddingLeft="40dp"
            android:fontFamily="@font/baloo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="50dp"
            android:paddingLeft="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vousetes"
                android:textSize="17sp"
                android:paddingTop="10dp"
                android:paddingRight="10dp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonRecruteur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Recruteur cherche des CV et pose des annonces de travail" />

                <RadioButton
                    android:id="@+id/radioButtonCandidat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Candidat cherche des annonces et pose des CV" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_gravity="center_vertical"
                android:paddingRight="40dp"
                android:textSize="17sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your email"
                android:minHeight="48dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ville"
                android:layout_gravity="center_vertical"
                android:paddingRight="40dp"
                android:textSize="17sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_gravity="center_vertical" />

            <Spinner

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_gravity="center_vertical"
                android:paddingRight="40dp"
                android:textSize="17sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your password"
                android:minHeight="48dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
