<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="180dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"

    tools:context=".MainActivity"
    android:background="@drawable/background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"

        android:layout_centerHorizontal="true"
        android:fontFamily="@font/baloo"
        android:text="@string/signein"
        android:textSize="40sp"
        />


    <EditText
        android:id="@+id/username1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:hint="User Name"
        android:minHeight="48dp"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:background="@drawable/border"
        android:padding="8dp"
        android:drawablePadding="8dp"/>

    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_marginTop="50dp"

        android:minHeight="48dp"
        android:layout_below="@+id/username1"
        android:drawableLeft="@drawable/baseline_data_usage_24"
        android:background="@drawable/border"
        android:padding="8dp"
        android:drawablePadding="8dp"/>



    <Button
        android:id="@+id/btnsignin1"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="sign in"
        android:layout_centerHorizontal="true"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height='wrap_content'
        android:text="@string/mdp"
        android:layout_below="@+id/btnsignin1"
        android:paddingLeft="80dp"
        android:paddingTop="18dp"
        android:textSize="15sp"
        android:id="@id/fmdp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height='wrap_content'
        android:text="@string/liensigneup"
        android:layout_below="@+id/fmdp"
        android:paddingLeft="51dp"
        android:paddingTop="10dp"
        android:textSize="15sp"
        android:clickable="true"
        android:id="@+id/lien"
        android:minHeight="48dp"

        />






</RelativeLayout>